--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,25 @@
+[build-system]
+requires = [
+   "setuptools",
+   "wheel"
+]
+build-backend = "setuptools.build_meta"
+
+[project]
+name = "tensorgrad"
+version = "0.1"
+dependencies = [
+   "networkx",
+   "torch",
+   "nbval",
+   "pytest",
+   "pynauty",
+   "pdf2image"
+]
+
+[tool.setuptools]
+packages = ["tensorgrad"]
+
 [tool.ruff]
 line-length = 110
 indent-width = 4
