--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,5 +24,5 @@ packages = ["tensorgrad"]
 line-length = 110
 indent-width = 4
 
-[tool.pytest.ini_options]
-addopts = "--nbval"
+# [tool.pytest.ini_options]
+# addopts = "--nbval"
