--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,3 @@
-[build-system]
-requires = [
-   "setuptools",
-   "wheel"
-]
-build-backend = "setuptools.build_meta"
-
 [project]
 name = "tensorgrad"
 version = "0.1"
@@ -17,6 +10,32 @@ dependencies = [
    "pdf2image",
    "sympy"
 ]
+requires-python = ">=3.11"
+authors = [
+  {name = "Thomas Ahle", email = "lobais@gmail.com"},
+]
+description = "Tensor Network Library with Symbolic Autograd"
+readme = "README.md"
+license = {file = "LICENSE"}
+keywords = ["tensors", "autograd"]
+classifiers = [
+  "Development Status :: 4 - Beta",
+  "Programming Language :: Python"
+]
+
+
+[project.urls]
+Homepage = "https://tensorcookbook.com"
+Repository = "https://github.com/thomasahle/tensorgrad.git"
+Issues = "https://github.com/thomasahle/tensorgrad/issues"
+
+[build-system]
+requires = [
+   "setuptools",
+   "wheel"
+]
+build-backend = "setuptools.build_meta"
+
 
 [tool.setuptools]
 packages = ["tensorgrad"]
@@ -26,6 +45,6 @@ line-length = 110
 indent-width = 4
 
 [tool.pytest.ini_options]
-addopts = "-s --cov=tensorgrad --cov-report=term-missing --cov-report=xml"
+addopts = "-s"
 # addopts = "--nbval"
 
