--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,8 +38,8 @@ requires = [
 build-backend = "setuptools.build_meta"
 
 
-[tool.setuptools]
-packages = ["tensorgrad"]
+[tool.setuptools.packages]
+find = {}
 
 [tool.ruff]
 line-length = 110
