--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,12 @@ find = {}
 line-length = 110
 indent-width = 4
 
+[tool.mypy]
+# Enable/disable type checking options
+check_untyped_defs = true
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+
 [tool.pytest.ini_options]
 # addopts = "-s"
 # addopts = "--nbval"
