--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ dependencies = [
    "pytest",
    "einops",
    "pdf2image",
-   "sympy"
+   "sympy",
+   "sparse"
 ]
 requires-python = ">=3.10"
 authors = [
