--- a/.github/workflows/build-lambda.yaml
+++ b/.github/workflows/build-lambda.yaml
@@ -27,7 +27,8 @@ jobs:
 
       # Build the Docker image locally using Docker Buildx
       - name: Build Docker image
-        run: docker buildx build -t tensorgrad -f docker/Dockerfile . \
+        run: |
+          docker buildx build -t tensorgrad -f docker/Dockerfile . \
             --build-arg AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
             --build-arg AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
             --build-arg AWS_REGION=${{ env.AWS_REGION }} \
