--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,16 @@
 # Use AWS Lambda base image for Python 3.12
 FROM public.ecr.aws/lambda/python:3.12
 
+# Save environment variables from build arguments
+ARG AWS_ACCESS_KEY_ID
+ENV AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+ARG AWS_SECRET_ACCESS_KEY
+ENV AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+ARG AWS_DEFAULT_REGION
+ENV AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
+ARG DYNAMODB_TABLE
+ENV DYNAMODB_TABLE=${DYNAMODB_TABLE}
+
 # Install microdnf for lightweight package management
 RUN microdnf update -y \
    && microdnf install -y \
