--- a/.github/workflows/build-lambda.yaml
+++ b/.github/workflows/build-lambda.yaml
@@ -31,7 +31,7 @@ jobs:
           docker buildx build -t tensorgrad -f docker/Dockerfile . \
             --build-arg AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
             --build-arg AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
-            --build-arg AWS_REGION=${{ env.AWS_REGION }} \
+            --build-arg AWS_DEFAULT_REGION=${{ env.AWS_REGION }} \
             --build-arg DYNAMODB_TABLE=${{ env.DYNAMODB_TABLE }}
 
       # Test the Docker image by running it locally and invoking the function
