--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,7 @@ dependencies = [
    "pdf2image",
    "sympy",
    "sparse",
-   "opt_einsum",
-   "boto3"
+   "opt_einsum"
 ]
 requires-python = ">=3.10"
 authors = [
