--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
-name = "tensorg"
-version = "0.1.10"
+name = "tensorgrad"
+version = "0.2.0"
 dependencies = [
    "networkx==3.2.1",
    "numpy",
