--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
    "pdf2image",
    "sympy",
    "sparse",
-   "opt_einsum"
+   "opt_einsum",
+   "scipy"
 ]
 requires-python = ">=3.10"
 authors = [
