--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,12 @@ dependencies = [
    "sympy",
    "sparse",
    "opt_einsum",
-   "scipy"
+   "scipy",
+   "requests>=2.32.3",
+   "pydantic>=2.11.5",
+   "fastapi>=0.115.12",
+   "mangum>=0.19.0",
+   "boto3>=1.38.23",
 ]
 requires-python = ">=3.10"
 authors = [
