--- a/.github/workflows/pypi.yaml
+++ b/.github/workflows/pypi.yaml
@@ -56,25 +56,20 @@ jobs:
           fi
         shell: bash
 
+      - name: Install uv
+        if: steps.version_check.outputs.version_changed == 'true'
+        uses: astral-sh/setup-uv@v5
+
       - name: Set up Python
         if: steps.version_check.outputs.version_changed == 'true'
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'
-
-      - name: Upgrade pip and install build tools
-        if: steps.version_check.outputs.version_changed == 'true'
-        run: |
-          python -m pip install --upgrade pip
-          pip install build twine
+        run: uv python install 3.13
 
       - name: Build the package
         if: steps.version_check.outputs.version_changed == 'true'
-        run: python -m build
+        run: uv build
 
       - name: Publish package to PyPI
         if: steps.version_check.outputs.version_changed == 'true'
         env:
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
-        run: python -m twine upload dist/*
+          UV_PUBLISH_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
+        run: uv publish
