--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -12,19 +12,19 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          enable-cache: true
 
       - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
+        run: uv python install 3.13
 
-      - name: Install Python dependencies
-        run: |
-          pip install .
-          pip install pytest
+      - name: Install dependencies
+        run: uv sync
 
       - name: Run Tests
-        run: |
-          pytest tests/ --maxfail=5 --disable-warnings
+        run: uv run pytest tests/ --maxfail=5 --disable-warnings
 
