--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
    "boto3>=1.38.23",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
+   "scikit-learn>=1.7.2",
 ]
 requires-python = ">=3.10"
 authors = [
